--- a/data/index.html
+++ b/data/index.html
@@ -1308,7 +1308,10 @@
                             html += '<td style="padding: 5px;">' + escapeHtml(deviceName) + '</td>';
                             html += '<td style="padding: 5px;">' + escapeHtml(varName) + '</td>';
                             html += '<td style="padding: 5px;"><strong>{d[' + deviceIndex + '][' + registerIndex + ']}</strong></td>';
-                            html += '<td style="padding: 5px; text-align: center;"><strong>' + (reg.value !== undefined ? reg.value.toFixed(2) : 'N/A') + '</strong></td>';
+                            // Mostra valor com Kalman se habilitado, caso contrário mostra valor normal
+                            const displayValue = reg.value !== undefined ? reg.value.toFixed(2) : 'N/A';
+                            const kalmanInfo = reg.kalmanEnabled ? ' <span style="color: #4CAF50; font-size: 10px;" title="Valor com filtro de Kalman aplicado">[K]</span>' : '';
+                            html += '<td style="padding: 5px; text-align: center;"><strong>' + displayValue + kalmanInfo + '</strong></td>';
                             html += '<td style="padding: 5px; text-align: center;">' + (reg.valueRaw !== undefined ? reg.valueRaw : 'N/A') + '</td>';
                             html += '<td style="padding: 5px; text-align: center;">' + (reg.gain !== undefined ? reg.gain.toFixed(2) : '1.00') + '</td>';
                             html += '<td style="padding: 5px; text-align: center;">' + (reg.offset !== undefined ? reg.offset.toFixed(2) : '0.00') + '</td>';
